# compiler

./: .gitignore  theory.md
cpp/: reg.cpp
flex/: numlex.cpp  numlex.l
language/bizon/: theory.md
language/bizon/numgrammar/: numgrammar-sr-fixed.y
language/flex/: numlex.l  therory.md
llvm/: Life-of-an-instruction-in-LLVM.md  theory.md
llvm/code-gen/: theory.md
llvm/code-gen/cpp/: CMakeLists.txt
llvm/ir/: arr.ll  bb.ll  func.ll  gep.ll  new-type.ll
